<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Banner Header-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/header_content_description"
            android:src="@drawable/indietrip_header"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter">
        </ImageView>

        <!--Country-->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/country"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp">
        </TextView>
        <AutoCompleteTextView
            android:id="@+id/input_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_country"
            android:inputType="text"
            android:completionThreshold="1"
            android:singleLine="true">
        </AutoCompleteTextView>

        <!--State-->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/state"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp">
        </TextView>
        <AutoCompleteTextView
            android:id="@+id/input_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_state"
            android:inputType="text"
            android:completionThreshold="1"
            android:singleLine="true"
            android:enabled="false">
        </AutoCompleteTextView>

    </LinearLayout>
</ScrollView>